chore(core): new dependency on jcabi-github

--- a/build.gradle
+++ b/build.gradle
@@ -27,6 +27,7 @@ dependencies {
     compile localGroovy()
     compile gradleApi()
     compile 'org.ajoberstar:gradle-git:1.2.0'
+    compile 'com.jcabi:jcabi-github:0.23'
     testCompile 'com.netflix.nebula:nebula-test:2.2.2', {
 		exclude module: 'groovy-all'
 	}
