test(core): Xmx for tests and print executed cmd to stdout

--- a/build.gradle
+++ b/build.gradle
@@ -40,3 +40,7 @@ task release {
     description = "Releases a version of the plugin on Artifactory and Bintray"
     dependsOn artifactoryPublish, bintrayUpload
 }
+
+test {
+    maxHeapSize = '256m'
+}
