chore(travis): Integration tests should now work on travis
They now only run if built on travis, or if the task integTest is executed

--- a/build.gradle
+++ b/build.gradle
@@ -41,6 +41,12 @@ task release {
     dependsOn artifactoryPublish, bintrayUpload
 }
 
+task integTest {
+    dependsOn test
+}
+
 test {
+    if (gradle.startParameter.taskNames.contains('integTest'))
+        systemProperty 'integTest', 'true'
     maxHeapSize = '256m'
 }
