--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -32,9 +32,9 @@ artifacts {
 
 def pomConfig = {
     name project.name
-    description 'Gradle plugin to generate webstart and applet jnlp files'
-    url 'https://github.com/tschulte/gradle-jnlp-plugin'
-    inceptionYear '2014'
+    description 'Gradle implementation of semantic-release'
+    url 'https://github.com/tschulte/gradle-semantic-release-plugin'
+    inceptionYear '2015'
     licenses {
         license([:]) {
             name 'The Apache Software License, Version 2.0'
@@ -43,7 +43,7 @@ def pomConfig = {
         }
     }
     scm {
-        url 'https://github.com/tschulte/gradle-jnlp-plugin'
+        url 'https://github.com/tschulte/gradle-semantic-release-plugin'
     }
     developers {
         [
