chore(coverage): publish of coverage to coveralls by travis

--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 script: ./gradlew clean build -is
 jdk: oraclejdk7
 env: TERM=dumb
-# after_success: ./gradlew jacocoRootReport coveralls
+after_success: ./gradlew cobertura coveralls
 addons:
   apt:
     packages:
