chore(travis): enable cache of ~/.gradle dir

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,8 @@
 sudo: false
 language: java
+cache:
+  directories:
+  - $HOME/.gradle
 script: ./gradlew clean build cobertura
 jdk: oraclejdk7
 env: TERM=dumb
