refactor: remove 'Gradle' from class names

--- a/src/main/resources/META-INF/gradle-plugins/de.gliderpilot.semantic-release.properties
+++ b/src/main/resources/META-INF/gradle-plugins/de.gliderpilot.semantic-release.properties
@@ -14,4 +14,4 @@
 # limitations under the License.
 #
 
-implementation-class=de.gliderpilot.gradle.semanticrelease.GradleSemanticReleasePlugin
+implementation-class=de.gliderpilot.gradle.semanticrelease.SemanticReleasePlugin
