--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@ language: java
 cache:
   directories:
   - $HOME/.gradle
-script: ./gradlew clean build cobertura
+script: ./gradlew clean build cobertura --info --stacktrace
 jdk: oraclejdk7
 env: TERM=dumb
 after_success: ./gradlew coveralls
