--- a/gradle/artifactory.gradle
+++ b/gradle/artifactory.gradle
@@ -26,6 +26,6 @@ artifactoryPublish {
     onlyIf {
         def pullRequest = System.getenv('TRAVIS_PULL_REQUEST')
 
-        !pullRequest || pullRequest=='false'
+        project.version.toString().endsWith('-SNAPSHOT') && (!pullRequest || pullRequest=='false')
     }
 }
