--- a/gradle/bintray.gradle
+++ b/gradle/bintray.gradle
@@ -25,3 +25,9 @@ bintray {
         }
     }
 }
+
+bintrayUpload {
+    onlyIf {
+        !project.version.toString().endsWith('-SNAPSHOT')
+    }
+}
