--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: java
 cache:
   directories:
   - $HOME/.gradle
+before_script: git checkout $TRAVIS_BRANCH
 script: ./gradlew clean release cobertura --info --stacktrace
 jdk: oraclejdk7
 env: TERM=dumb
