--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,11 @@ env: TERM=dumb
 cache:
   directories:
   - $HOME/.gradle
-before_install: git checkout -qf $TRAVIS_BRANCH
+before_install:
+  - git config user.email "tobias.schulte@gliderpilot.de"
+  - git config user.name "Travis-CI"
+  - git config credential.helper "store --file=.git/credentials"
+  - echo "https://${GH_TOKEN}:@github.com" > .git/credentials
+  - git checkout -qf $TRAVIS_BRANCH
 install: ./gradlew release cobertura --info --stacktrace
 after_success: ./gradlew coveralls
