chore: use https:// instead of git://

--- a/.travis.yml
+++ b/.travis.yml
@@ -13,6 +13,7 @@ before_install:
   - git config user.email "tobias.schulte@gliderpilot.de"
   - git config user.name "Travis-CI"
   - git config credential.helper "store --file=.git/credentials"
+  - git config url.https://.insteadOf git://
   - echo "https://${GH_TOKEN}:@github.com" > .git/credentials
   - git checkout -qf $TRAVIS_BRANCH
 install: ./gradlew release cobertura --info --stacktrace
