refactor(credentials): reduce duplication in credentials.gradle

--- a/gradle/credentials.gradle
+++ b/gradle/credentials.gradle
@@ -1,3 +1,7 @@
-ext.bintrayUsername = project.hasProperty('bintrayUsername')?project.getProperty('bintrayUsername'):System.getenv('BINTRAY_USER')?:''
-ext.bintrayKey = project.hasProperty('bintrayKey')?project.getProperty('bintrayKey'):System.getenv('BINTRAY_KEY')?:''
-ext.ghToken = project.hasProperty('ghToken')?project.getProperty('ghToken'):System.getenv('GH_TOKEN')?:''
+def setExtValue(String property, String systemenv) {
+    project.ext."$property" = project.hasProperty(property)?project.getProperty(property):System.getenv(systemenv)?:''
+}
+
+setExtValue('bintrayUsername', 'BINTRAY_USER')
+setExtValue('bintrayKey', 'BINTRAY_KEY')
+setExtValue('ghToken', 'GH_TOKEN')
