chore: add gradle-plugin-publish plugin

--- a/gradle/credentials.gradle
+++ b/gradle/credentials.gradle
@@ -5,3 +5,5 @@ def setExtValue(String property, String systemenv) {
 setExtValue('bintrayUsername', 'BINTRAY_USER')
 setExtValue('bintrayKey', 'BINTRAY_KEY')
 setExtValue('ghToken', 'GH_TOKEN')
+setExtValue('gradle.publish.key', 'GRADLE_KEY')
+setExtValue('gradle.publish.secret', 'GRADLE_SECRET')
