--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,9 @@ apply from: 'gradle/code-coverage.gradle'
 buildscript {
     repositories {
         jcenter()
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
     }
     dependencies {
         classpath 'com.jfrog.bintray.gradle:gradle-bintray-plugin:1.2'
@@ -21,6 +24,7 @@ buildscript {
         classpath 'net.saliman:gradle-cobertura-plugin:2.2.8'
         classpath 'org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.4.0'
         classpath 'com.github.ben-manes:gradle-versions-plugin:0.11.3'
+        classpath "com.gradle.publish:plugin-publish-plugin:0.9.1"
     }
 }
 
