--- a/gradle/publishing.gradle
+++ b/gradle/publishing.gradle
@@ -98,3 +98,9 @@ pluginBundle {
         }
     }
 }
+
+tasks.publishPlugins {
+    onlyIf {
+        !project.version.toString().endsWith('-SNAPSHOT')
+    }
+}
