chore: set properties gradle.publish.key and .secret in .travis.yml

--- a/build.gradle
+++ b/build.gradle
@@ -55,7 +55,7 @@ task integTest {
 
 tasks.release {
     dependsOn build
-    finalizedBy bintrayUpload, artifactoryPublish, publishPlugins
+    finalizedBy publishPlugins, bintrayUpload, artifactoryPublish
 }
 
 test {
