--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ branches:
   except:
     - /^v\d+\.\d+\.\d+$/
 before_install:
+  - git fetch --unshallow
   - git config user.email "tobias.schulte@gliderpilot.de"
   - git config user.name "Travis-CI"
   - git config url.https://.insteadOf git://
