--- a/gradle/credentials.gradle
+++ b/gradle/credentials.gradle
@@ -1,5 +1,5 @@
 def setExtValue(String property, String systemenv) {
-    project.ext."$property" = project.hasProperty(property)?project.getProperty(property):System.getenv(systemenv)?:''
+    project.ext."$property" = project.hasProperty(property) ? project.getProperty(property) : System.getenv(systemenv)
 }
 
 setExtValue('bintrayUsername', 'BINTRAY_USER')
