chore: configure release dependencies at one place in build.gradle
- depend on auto-wiring (release.dependsOn build, finalizedBy publish)
- let publish dependOn bintrayUpload, publishPlugins and artifactoryPublish
  (depending if it is a release or snapshot)
- don't use onlyIf on the tasks any more

--- a/build.gradle
+++ b/build.gradle
@@ -54,9 +54,11 @@ task integTest {
     dependsOn test
 }
 
-tasks.release {
-    dependsOn build
-    finalizedBy publishPlugins, bintrayUpload, artifactoryPublish
+publish {
+    if (!version.toString().endsWith('-SNAPSHOT'))
+        dependsOn publishPlugins, bintrayUpload
+    else if ((System.getenv('TRAVIS_PULL_REQUEST') ?: "false") == "false")
+        dependsOn artifactoryPublish
 }
 
 test {
