feat: autowire build and upload tasks to release
Closes #16

--- a/build.gradle
+++ b/build.gradle
@@ -54,10 +54,10 @@ task integTest {
     dependsOn test
 }
 
-tasks.release {
-    dependsOn build
-    finalizedBy publishPlugins, bintrayUpload, artifactoryPublish
-}
+if (!version.toString().endsWith('-SNAPSHOT'))
+    publish.dependsOn publishPlugins, bintrayUpload
+else if ((System.getenv('TRAVIS_PULL_REQUEST') ?: "false") == "false")
+    publish.dependsOn artifactoryPublish
 
 test {
     if (gradle.startParameter.taskNames.find { ['integTest', 'release'].contains(it) })
