feat: allow specifying name, label and contentType of releaseAssets
refactor on the way.

Add new repo closure to semanticRelease extension.
Here both ghToken and all releaseAssets must be given. Mark old
changeLog.ghToken as deprecated

Add new UpdateGithubRelease task. The release is now updated using this
task instead of release.doLast

--- a/build.gradle
+++ b/build.gradle
@@ -47,7 +47,7 @@ sourceSets {
 group = 'de.gliderpilot.gradle.semantic-release'
 
 semanticRelease {
-    changeLog.ghToken = project.ext.ghToken
+    repo.ghToken = project.ext.ghToken
 }
 
 task integTest {
