test: clean up integration test dirs
Otherwise remote git repositories contain commits from older runs,
and tests fail with the following error:

```
! [rejected]        HEAD -> master (fetch first)
error: failed to push some refs to ...
hint: Updates were rejected because the remote contains work that you do
hint: not have locally.
```

--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,19 @@ semanticRelease {
 }
 
 task integTest {
-    dependsOn test
+    dependsOn cleanIntegTest, test
+}
+
+cleanIntegTest {
+  delete new File(buildDir, 'nebulatest')
+}
+
+test {
+    dependsOn cleanTest
+}
+
+cleanTest {
+  delete new File(buildDir, 'nebulatest')
 }
 
 if (!version.toString().endsWith('-SNAPSHOT'))
