--- a/build.gradle
+++ b/build.gradle
@@ -36,6 +36,7 @@ dependencies {
     testCompile 'com.netflix.nebula:nebula-test:2.2.2', {
         exclude module: 'groovy-all'
     }
+    testCompile 'org.apache.commons:commons-exec:1.3'
 }
 
 // workaround for tests to run (see http://stackoverflow.com/questions/29377544/my-gradle-project-depends-on-commons-io-2-4-but-gradle-puts-gradle-home-common)
