--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_install:
   - git config user.email "tobias.schulte@gliderpilot.de"
   - git config user.name "Travis-CI"
   - git config url.https://.insteadOf git://
-  - git checkout -qf $TRAVIS_BRANCH
+  - [ "${TRAVIS_PULL_REQUEST}" = "false" ] && git checkout -qf $TRAVIS_BRANCH
 # skip default gradlew assemble
 install:
   - echo "skip default gradlew assemble"
